<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Flickazham</string>
    <string name="action_settings">Settings</string>
    <string name="none"></string>
    <string name="photoTitle">Photo Title</string>
    <string name="photoArtist">Photo Artist</string>
    <string name="publishedDate">Published on %1s</string>
    <string name="no_data">--</string>
    <string name="title_activity_flickazham_start">Flickazham</string>
    <string name="main_splash_title">Flickazham</string>
    <string name="main_splash_subtitle">Flickazham Android Test</string>
    <string name="main_splash_subtitle_author">Developed by Ciro Rizzo</string>
    <string name="result_for">Results for tag: %1s</string>
    <string name="result_for_user">Results for user: %1s</string>
    <string name="paging_feed">Page %1s</string>
    <string name="dialog_button_gotcha">Ok, Got it!</string>
    <string name="dialog_title_nodatafound">No data found</string>
    <string name="dialog_message_nodatafound">Seems no Data Feed availableat the moment\nPlease try later</string>
    <string name="dialog_title_nodataconnection">No data connection</string>
    <string name="dialog_message_nodataconnection">Data connection is not available at the moment\nCheck data settings or try later\nFlickazham is going to be closed</string>
    <string name="dialog_title_errorcaught">Error encuntered</string>
    <string name="dialog_message_errorcaught">Seems something goes wrong!\nContact our support Team. Thanks</string>
    <string name="title_activity_photo_gallery">PhotoGalleryActivity</string>

</resources>
