<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/song_list"
    android:name="com.android.kawazham.SongList"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >

	<ImageView
	    android:id="@+id/imgPhotoThumbnail"
	    android:layout_width="0dp"
	    android:layout_height="wrap_content"
	    android:layout_weight="1"
	    android:contentDescription="@string/none"
	    android:paddingTop="5dp"
	    android:src="@drawable/no_photo" />

	<LinearLayout
	    android:layout_width="0dp"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:layout_marginLeft="2dp"
	    android:layout_weight="3"
	    android:orientation="vertical" >

	    <TextView
	        android:id="@+id/txtVwTitle"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/photoTitle"
	        android:textAppearance="@style/itemListItem01" />

	    <TextView
	        android:id="@+id/txtVwArtist"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/photoArtist"
	        android:textStyle="italic" />

	</LinearLayout>


</LinearLayout>